P2-Ch.05/P2-Ch.05-5.Pengenalan Pengendali Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: / # hello-world.example
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
